--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body{
+    font-family: 'Poppins', sans-serif;
+}
 h1{
-    color: green;
+  font-size: 50px;
+}
+.orange-color{
+    color: orange;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
 }
