--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+body p{
+    text-align: justify;
+}
 h1{
   font-size: 50px;
 }
@@ -45,6 +48,7 @@ section{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
+    padding-bottom: 223px;
 }
 .flexible-container{
     display: flex;
@@ -55,6 +59,7 @@ section{
     margin-left: 5%;
     margin-right: 5%;
     padding-left: 10px;
+    padding-right: 7px;
 }
 #learn-level{
     border-left: 5px solid;
